# goto

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
shell/: goto.fish  goto.sh
src/: main.rs
tests/: cli.rs  shell_integration.sh
